fixed alignment of page tabs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,6 @@ body {
 .headercontainer {
     width: 960px;
     height: 75px;
-    border: red dotted;
     /*position:absolute;
     text-align:center;
     overflow: hidden;
@@ -53,7 +52,8 @@ body {
     vertical-align: middle;
     padding: 0;
     margin:0;
-    bottom: 37px;
+    /*bottom: 37px;*/
+    padding: 20px;
     /*top: 25px;
     right: 0;
     /*bottom: 37px;*/
